[package]
name = "httparse"
version = "0.1.0"
authors = ["buroz <burakoz@zoho.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httparse = "1.3.4"
dotenv = "0.15.0"
config = "0.10.1"
serde = { version = "1.0.105", features = ["derive"] }
